--- a/templates/announcements/create-update.html
+++ b/templates/announcements/create-update.html
@@ -7,8 +7,10 @@
 <div class='row mx-auto w-50'>
     <div class="col">
         <h1>Dodaj ogłoszenie</h1>
-            
-            {% include "announcements/partials/forms.html" %}
+            <div class="form">
+                {% include "announcements/partials/forms.html" %}
+            </div>
+
         
     </div>
     
