--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
         <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <link rel="shortcut icon" type="image/jpg" href="https://chess.fra1.digitaloceanspaces.com/media/board.jpg"/>
         <title> {% block title %}{% endblock %}ChessTutors</title>
     </head>
     <body>
