--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,11 @@
         <title> {% block title %}{% endblock %}ChessTutors</title>
     </head>
     <body>
+      <style>
+        .asteriskField {
+            display: none;
+        }
+      </style>
         <section>
             {% include 'base/navbar.html' %}
         </section>
