--- a/templates/form_comments.html
+++ b/templates/form_comments.html
@@ -33,8 +33,7 @@
                             <span class="float-end badge bg-success badge-pill">{{ comment.rating }} / <span class="bg-success badge-pill"> 5 </span></span>
                       </p>
                       <div>
-                        
-                        <p>{{ comment.content }}</p>`
+                        <p>{{ comment.content }}</p>
                       </div>
                         
                     </div>
